@@ -33,5 +33,6 @@
 void setup(int argc, char * argv[]);
 void cleanup(void);
 void cleanup_on_error(void);
+extern void initialize_options_user(void);
 
 #endif
